--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
                 run: lighter
         spec:
             containers:
-                -   image: ghcr.io/exacaster/lighter:0.0.41-spark3.3.1
+                -   image: sasnouskikh/livy:0.8.0-incubating-spark_3.0.1_2.12-hadoop_3.2.0_cloud
                     name: lighter
                     readinessProbe:
                         httpGet:
@@ -33,16 +33,16 @@ spec:
                     ports:
                         -   containerPort: 8080
                     env:
-                        -   name: LIGHTER_STORAGE_JDBC_USERNAME
-                            value: postgres_user
-                        -   name: LIGHTER_STORAGE_JDBC_PASSWORD
-                            value: postgres_password
-                        -   name: LIGHTER_STORAGE_JDBC_URL
-                            value: jdbc:postgresql://postgres_host_name:5432/lighter
-                        -   name: LIGHTER_STORAGE_JDBC_DRIVER_CLASS_NAME
-                            value: org.postgresql.Driver
-                        -   name: LIGHTER_SPARK_HISTORY_SERVER_URL
-                            value: https://address_to_spark_history/spark-history
+                        -   name: LIGHTER_KUBERNETES_ENABLED
+                            value: "true"
+                        # -   name: LIGHTER_STORAGE_JDBC_USERNAME
+                        #     value: postgres
+                        # -   name: LIGHTER_STORAGE_JDBC_PASSWORD
+                        #     value: JDfQeUq4Dl
+                        # -   name: LIGHTER_STORAGE_JDBC_URL
+                        #     value: jdbc:postgresql://lighter-psql-postgresql.spark.svc.cluster.local:5432/lighter
+                        # -   name: LIGHTER_STORAGE_JDBC_DRIVER_CLASS_NAME
+                        #     value: org.postgresql.Driver
                         -   name: LIGHTER_MAX_RUNNING_JOBS
                             value: "15"
             serviceAccountName: spark
